k3s/kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuma
  namespace: kuma
spec:
  selector:
    app: kuma
  ports:
    - name: http
      port: 80
      targetPort: 3001
