k3s/kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma
  namespace: kuma
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  ingressClassName: traefik
  rules:
    - host: kuma.k3s.dawo9889-homelab.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuma
                port:
                  name: http
  tls:
    - hosts:
        - kuma.k3s.dawo9889-homelab.ovh
      secretName: kuma-tls
